update fee and relayer security
